# OSCS

./: .gitignore  Readme.md  main.py  openbackdoor.py  pyproject.toml  run.sh  settings.py
OSCS/: main.py  rkde.py  utils.py
configs/: openbackdoor_final.yaml
openbackdoor/: __init__.py
openbackdoor/attackers/: attacker.py  lws_attacker.py
openbackdoor/attackers/poisoners/: addsent_poisoner.py  badnets_poisoner.py  ep_poisoner.py  lwp_poisoner.py  neuba_poisoner.py  poisoner.py  por_poisoner.py  sos_poisoner.py  stylebkd_poisoner.py  synbkd_poisoner.py  trojanlm_poisoner.py
openbackdoor/data/: __init__.py  plain_dataset.py
openbackdoor/defenders/: bki_defender.py  cube_defender.py  defender.py  onion_defender.py  rap_defender.py  strip_defender.py
openbackdoor/trainers/: __init__.py  adaptive_trainer.py  ep_trainer.py  lm_trainer.py  lwp_trainer.py  lws_trainer.py  neuba_trainer.py  por_trainer.py  ripples_trainer.py  sos_trainer.py  trainer.py
openbackdoor/utils/: __init__.py  eval.py  evaluator.py  log.py  metrics.py
openbackdoor/victims/: plms.py
poison_data/agnews/0/badnets/: test-poison.csv
poison_data/agnews/0/stylebkd/: dev-poison.csv  test-poison.csv
poison_data/agnews/0/synbkd/: dev-clean.csv  dev-poison.csv  sample.ipynb  test-clean.csv  test-poison.csv  train-clean.csv  train-poison.csv
poison_data/hsol/0/addsent/: dev-clean.csv  dev-poison.csv  test-clean.csv  test-poison.csv  train-poison.csv
poison_data/hsol/0/badnets/: dev-clean.csv  dev-poison.csv  test-clean.csv  test-poison.csv  train-poison.csv
poison_data/hsol/0/stylebkd/: dev-clean.csv  dev-poison.csv  test-clean.csv  test-poison.csv  train-poison.csv
poison_data/hsol/0/synbkd/: dev-clean.csv  dev-poison.csv  test-clean.csv  test-poison.csv  train-poison.csv
poison_data/yelp/1/badnets/: test-poison.csv
poison_data/yelp/1/stylebkd/: dev-poison.csv  test-poison.csv  train-poison.csv
poison_data/yelp/1/synbkd/: dev-clean.csv  dev-poison.csv  test-clean.csv  test-poison.csv  train-clean.csv  train-poison.csv
scoring/: badacts.py  mahalanobis.py  utils.py
utils/: logger.py  metrics.py  path.py  plot.py  utils.py
