[project]
name = "oscs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "accelerate==1.12.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asttokens==3.0.1",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "comm==0.2.3",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "datasets==4.4.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "dill==0.4.0",
    "distro==1.9.0",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fastchat==0.1.0",
    "filelock==3.19.1",
    "fonttools==4.61.0",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "h11==0.16.0",
    "hdbscan==0.8.40",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==8.37.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.2",
    "jsonlines==4.0.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "llvmlite==0.45.1",
    "markupsafe==2.1.5",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "nltk==3.9.2",
    "numba==0.62.1",
    "numpy==2.2.6",
    "openai==2.15.0",
    "openattack==2.1.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.1.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pynndescent==0.5.13",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "sentence-transformers==5.1.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchvision==0.24.1",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.57.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "umap-learn==0.5.9.post2",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
